fix for phone views on smaller screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,7 @@ a{
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    min-width: 450px;
+    min-width: 350px;
     font-size: 18px;
 }
 
@@ -34,7 +34,7 @@ header{
 
 .navigations nav a{
     color: var(--nav-txt-color);
-    padding: 5px 12px;
+    padding: 5px 2px;
     margin: 0px 5px;
     border-bottom: 3px solid var(--nav-txt-color);
     box-shadow: inset 0 0 0 0 var(--nav-txt-color);
